# Sheetpilot

./: .cursorignore  .editorconfig  .eslintcache  .gitignore  .jscpdrc.json  .lintstagedrc.json  .ncurc.json  .prettierignore  .prettierrc  .prettierrc.json  .versionrc.json  CHANGELOG.md  CODE_REVIEW_COMPLETED.md  CODE_REVIEW_IMPLEMENTATION_SUMMARY.md  COMPLETE_TEST_ORGANIZATION.md  IMPORT_FIXES_SUMMARY.md  LINTING.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PROGRESS_BAR_FIX.md  QUALITY_GATES_IMPLEMENTATION.md  README.md  RELEASE_NOTES_v1.1.2.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.2.2.md  RELEASE_NOTES_v1.4.0.md  RESTRUCTURE_COMPLETE.md  Sheetpilot.code-workspace  TECHNICAL_DEBT_BOT_SERVICE.md  TEST_ORGANIZATION.md  TIMESHEET_FIXES_DOCUMENTATION.md  Timesheet.xlsx  VERIFICATION_SUMMARY.md  WebForm.html  eslint.config.js  eslint.config.mjs  license-checker.json  lint-results.json  main.ts  nodemon.json  package-lock.json  (+13 more)
.husky/: pre-commit
backend/: .clippy.toml  Cargo.toml  SQLX_MIGRATION.md  database.ts  rustfmt.toml  tauri.conf.json  timesheet_importer.ts
backend/.sqlx/: query-2b51cd198abbb0e84c1c31474e54a971094393a1b4a7a0c03d15ce2291a0e31a.json  query-3f719bd2aebf15118ac045db68515e18999f8f2e8b70e040e078f296c2542310.json  query-4e534586772041db95445660941e8acc085197dce36e891b4103ff7d92c1d25e.json  query-5025bceaba458a34295eff689fb9c37d30372e6d70347fb9761921c58c79463a.json  query-5f5c433851923ec0386f7574839b3ab315aa6b76a837e4310a1590665e5ff933.json  query-702e50ce8511f915d7afc4b20db544086b477526f67e0f85e0595d4d7e5bd1b9.json  query-9d13e766a443c1ff448bd65793aed1980f1a865be8540acceb6fd0e883f5036e.json  query-9fc376f9b5b831e0d110ea5d793ea9df741501042c359eb7cb87fc358f2dcd17.json  query-a2b74ce71c7e6ed5f4f9cd6477bf413d695de5ef289bc937b54aabf88dcd9582.json  query-ba74789fb6ef5e4f915b9df432d1acd67a815f8f1bb08d6dda8cee9c45e9b245.json  query-c3f401a0b9d2088b067ff7ede5f9cc44e775ca0b3e7c758a9c7ae493e2ab331d.json  query-d21cd7463e0a7bec1edf9fed3937840399a3c76a04e077c8a6ce97147929bf4e.json  query-d3a1aeac048c2dc311202856bd83c35aaa6b71aa471cc9ddaa753baf9228923a.json  query-ee5bfca3d2755b9a9e0189c255156e52992ad645e9daff4276516db89a382e7d.json
backend/bot/: package.json  tsconfig.json
backend/bot/src/: bot_orchestation.ts  index.ts  webform_flow.ts
backend/bot/tests/: authentication_flow.spec.ts  bot_orchestation.spec.ts  webform_flow.spec.ts
backend/migrations/: 20240101000001_create_timesheet_table.sql  20240101000002_create_credentials_table.sql  20240101000003_create_sessions_table.sql  20240101000004_add_submission_tracking.sql
backend/src/: auth.rs  auth_test.rs  bot.rs  database.rs  database_test.rs  lib.rs  main.rs  recovery.rs
backend/src/bot/: authentication.rs  automation_config.rs  browser.rs  orchestration.rs  quarter_config.rs  quarter_config_test.rs  webform.rs
backend/src/commands/: auth.rs  credentials.rs  database.rs  logging.rs  mod.rs  submission.rs
tauri-refactor/src-tauri/: Cargo.toml  tauri.conf.json
(+999 files in other folders)
