[package]
name = "sheetpilot"
version = "1.0.0"
description = "Business timesheet management and reporting tool"
authors = ["Andrew Hughes"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sheetpilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chromiumoxide = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

# Size optimization settings
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization (slower compile, smaller binary)
strip = true        # Strip symbols from binary
panic = "abort"     # Smaller panic handler
